--- a/flask/templates/stu_form.html
+++ b/flask/templates/stu_form.html
@@ -12,20 +12,7 @@
 </head>
 
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
-
+  
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
@@ -159,7 +146,7 @@
         </div>
 		
 		<div class="input-field col s4">
-            <label for="first_name"><b>Disabled?</b></label>
+            <label for="first_name"><b>Is the student disabled?</b></label>
             <br>
           <input placeholder="Disabled?" name="Disabled?" id="first_name" type="text" class="validate" value="N">
         </div>
@@ -196,27 +183,16 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h7 class="white-text">COMING SOON! Knowledge Index prediction</h7>
+          <p class="grey-text text-lighten-4">An unique Knowlegde index calculated based on student's past performances and behaviours coming up soon. Stay tuned !!</p>
 
 
         </div>
+        
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Contact Us</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">Cognitive Challengers</a></li>
           </ul>
         </div>
       </div>
